add block generator

--- a/app/templates/main.ejs
+++ b/app/templates/main.ejs
@@ -7,7 +7,7 @@
     <title></title>
 
 </head>
-<body ng-app="TestJob">
+<body ng-app="TestJob" ng-controller="MainCtrl as Main">
 <!--
   The nav bar that will be updated as we navigate between views.
 -->
@@ -19,35 +19,15 @@
 -->
 
 <gallery>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
+    <g-img ng-repeat="block in Main.blocks">
+        <img height="{{block.height}}px"
+             width="{{block.width}}px"
+             ng-src="{{block.url}}">
     </g-img>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
-    </g-img>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
-    </g-img>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
-    </g-img>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
-    </g-img>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
-    </g-img>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
-    </g-img>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
-    </g-img>
-    <g-img>
-        <img height="150px" src="http://static6.depositphotos.com/1015060/669/i/950/depositphotos_6696479-Green-wooden-block-house.jpg">
-    </g-img>
-
 </gallery>
+<div class="text-center" style="text-align: center;">
+    <span>Сгенерировать </span><input type="number" ng-model="Main.blockCounts">
+</div>
 
 </body>
 </html>
