--- a/app/components/gallery/gallery-template.html
+++ b/app/components/gallery/gallery-template.html
@@ -1,4 +1,4 @@
-<div class="gallery">
+<div msd-wheel="GalleryCtrl.wheel($event)" class="gallery">
     <div class="row">
 
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"
