--- a/app/templates/main.ejs
+++ b/app/templates/main.ejs
@@ -8,25 +8,21 @@
 
 </head>
 <body ng-app="TestJob" ng-controller="MainCtrl as Main">
-<!--
-  The nav bar that will be updated as we navigate between views.
--->
 
-<!--
-  The views will be rendered in the <ion-nav-view> directive below
-  Templates are in the /templates folder (but you could also
-  have templates inline in this html file if you'd like).
--->
+<div class="content">
+    <div class="head">
+        <span>Количество элементов в галерее: </span>
+        <input type="number" ng-model="Main.blockCounts">
+        <span><button ng-click="Main.draw()"> Перерисовать</button></span>
+    </div>
 
-<gallery>
-    <g-img ng-repeat="block in Main.blocks">
-        <img height="{{block.height}}px"
-             width="{{block.width}}px"
-             ng-src="{{block.url}}">
-    </g-img>
-</gallery>
-<div class="text-center" style="text-align: center;">
-    <span>Сгенерировать </span><input type="number" ng-model="Main.blockCounts">
+    <gallery>
+        <g-img ng-repeat="block in Main.blocks">
+            <img height="{{block.height}}px"
+                 width="{{block.width}}px"
+                 ng-src="{{block.url}}">
+        </g-img>
+    </gallery>
 </div>
 
 </body>
